# Aitify

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  README_zh.md  ai-reminder.js  config.example.json  notify-sound.js  notify-system.js  package-lock.json  package.json  setup-wizard.js  telegram-notify.js
.github/workflows/: release-build.yml
desktop/: main.js  preload.js
desktop/renderer/: index.html  notify.html  renderer.js  splash.html  style.css
docs/plans/: 2026-03-07-qwen-watch-support-design.md  2026-03-07-qwen-watch-support.md
src/: Cargo.toml  args.js  bootstrap.js  cli.js  config.js  default-config.js  engine.js  focus.js  format.js  legacy-config.js  paths.js  project-name.js  state.js  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  notify.rs  watch.rs
src/notifiers/: desktop.js  sound.js  telegram.js
src/src/: config.rs  main.rs  notify.rs  watch.rs
src/src/watch/: claude.rs  codex.rs  gemini_qwen.rs  opencode.rs  runtime.rs  shared.rs  tests.rs
tools/: generate-icons.py
ui/: app.js  index.html  style.css
