[package]
name = "ai-cli-complete-notify"
version = "1.5.2"
description = "AI CLI Complete Notify：多种 AI CLI 任务完成提醒"
authors = [""]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
notify = "6"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"
windows-registry = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
